--- a/catalogue/manifest.yml
+++ b/catalogue/manifest.yml
@@ -4,8 +4,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: catalogue
+  namespace: roboshop 
 data:
-  MONGO="true"
+  MONGO: "true"
 
 
 ---
