--- a/web/manifest.yml
+++ b/web/manifest.yml
@@ -85,8 +85,12 @@ data:
         }
 
         location /api/catalogue/ {
-        proxy_pass http://catalogue:8080/;
-    }
+        proxy_pass http://catalogue:8080/; 
+           }
+
+           location /api/user/ {
+        proxy_pass http://user:8080/;
+           }
 
     }
 
