--- a/payment/manifest.yml
+++ b/payment/manifest.yml
@@ -38,7 +38,7 @@ spec:
     spec:
       containers: 
       - name: payment
-        image: dockerlearnsrikanth/payment:1
+        image: dockerlearnsrikanth/payment:v1
         imagePullPolicy: Always
         envFrom:
         - secretRef:
