--- a/web/manifest.yml
+++ b/web/manifest.yml
@@ -104,6 +104,11 @@ data:
         proxy_pass http://payment:8080/;
           }
 
+          location /nginx_status {
+        stub_status on;
+        access_log off;
+    }
+
     }
 
     }
