--- a/payment/manifest.yml
+++ b/payment/manifest.yml
@@ -1,52 +1,44 @@
----
 apiVersion: v1
-kind: Secret  
+kind: Secret
 metadata:
   name: payment
-  namespace: roboshop 
-type: Opaque  
+  namespace: roboshop
+type: Opaque
 data:
-    AMQP_USER: cm9ib3Nob3A=
-    AMQP_PASS: cm9ib3Nob3AxMjM=
- 
-
+  AMQP_USER: cm9ib3Nob3A=
+  AMQP_PASS: cm9ib3Nob3AxMjM=
 ---
-
-apiVersion: apps/v1 
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: payment
   namespace: roboshop
-  labels:
+  labels: # these labels are deployment labels
     app: payment
     project: roboshop
     tier: app
-
 spec:
   replicas: 1
   selector:
-    matchLabels: #labels used to find pods
+    matchLabels: # these labels are used to find the pods
       app: payment
       project: roboshop
       tier: app
-
-  template: #it's the pod definition section 
+  template:
     metadata:
-      labels: #pod labels
+      labels: # these labels are pod labels
         app: payment
         project: roboshop
         tier: app
     spec:
-      containers: 
+      containers:
       - name: payment
-        image: dockerlearnsrikanth/payment:v1
+        image: joindevops/payment:v1
         imagePullPolicy: Always
         envFrom:
         - secretRef:
             name: payment
-
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
@@ -58,9 +50,6 @@ spec:
     project: roboshop
     tier: app
   ports:
-    - protocol: TCP
-      port: 8080 #serviceport
-      targetPort: 8080 #containerport
-
-
-
+  - protocol: TCP
+    port: 8080 #service-port
+    targetPort: 8080 #container-port
